--- a/frontend/src/Reccommendations/Recommendations.css
+++ b/frontend/src/Reccommendations/Recommendations.css
@@ -1,19 +1,28 @@
 .recommendations {
-  margin-top: 30px;
-    width: 70%;
+  margin-top: 55px;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
 .recommendations_title {
     font-weight: bold;
     font-size: 24px;
     color: #54758B;
+    width: 70%;
+    margin: auto;
 }
 
 .recommendations_content {
+    margin-top: 30px;
     display: flex;
     flex-direction: row;
     align-items: baseline;
     gap: 40px;
     overflow-x: scroll;
     text-align: center;
+}
+
+.recommendations_content_spacer {
+  margin-left: 10%;
+  background-color: green;
 }
